--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,7 @@
 name: Build and Push Docker Image
 
 on:
+  workflow_dispatch:
 
 jobs:
   build:
@@ -8,7 +9,14 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
+
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_KEY }}
+          aws-region: ${{ secrets.AWS_REGION }}
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
@@ -21,7 +29,7 @@ jobs:
         with:
           context: .
           push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/my-docker-image:latest
+          tags: sjflausino/frontend:latest
       
       - name: Ecs-compose install
         run: |
@@ -29,6 +37,10 @@ jobs:
             source ~/venv/bin/activate
             pip install pip -U
             pip install ecs-composex
+
+      - name: Ecs-compose init
+        run: |
+          ecs-compose-x init
 
       - name: Ecs-compose install
         run: |
