--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,7 @@
 version: "3.8"
 services:
   frontend:
-    image: veecode/ecs-image:latest
+    image: sjflausino/frontend:latest
     ports:
       - protocol: tcp
         target: 5000
