--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,6 +37,10 @@ jobs:
             pip install pip -U
             pip install ecs-composex
 
+      - name: pip -V
+        run: |
+          pip -V
+
       - name: Ecs-compose init and up
         run: |
           ecs-compose-x init
