adding step to restore ecs's task IP

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,3 +42,19 @@ jobs:
           source ~/venv/bin/activate
           ecs-compose-x init
           ecs-compose-x up -f docker-compose.yaml -f aws-compose-x.yaml -n frontend-app
+
+      - name: Restore IP from app
+        run: |
+            export TASK_ID=$(aws ecs list-tasks --cluster ecs-clusterx | jq -r '.taskArns[0]' | awk -F'/' '{print $NF}')
+            timeout=10
+            comando=$(aws ecs describe-tasks --tasks $TASK_ID --cluster ecs-clusterx --query 'tasks[0].containers[0].lastStatus')
+            while [[ $counter -lt $timeout ]]; do
+                if $comando | grep -q "RUNNING"; then
+                    echo "$(./list-ips.sh)"
+                    break
+                else
+                    sleep 10
+                    counter=$((counter+1))
+                fi
+            done
+            
