--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,7 +44,7 @@ jobs:
           ecs-compose-x up -f docker-compose.yaml -f aws-compose-x.yaml -n frontend-app
 
   restore_ip:
-    needs: build
+    # needs: build
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
